# opapi

./: .env.example  .gitignore  AGENTS.md  AI.md  CONFIG.md  CONFIG_MAPPING.md  CURRENT_DIRECTION.md  CURRENT_TASK.md  Cargo.toml  DATA_MODEL.md  Dockerfile  FEATURES.md  IDENTITY.md  INTEGRATION_PLAN.md  MEMORY.md  OpenClaw-OpenAI-Gateway-Control-Plane-PRD-v3.md  OpenClaw-OpenAI-Gateway-V1-Implementation-Plan.md  PLAN.md  PROGRESS.md  PROJECTS.md  README.md  ROUTING_PLAN.md  STATUS.md  SUBAGENT_TEMPLATE.md  Sub2API自动化架构设计_0330224011.md  TODO.md  TOOLS.md  USER.md  UbuntuDocker部署手册_0331165925.md  config.yaml.tmp.archived-20260331-164057  docker-compose.yml  keys.example.txt  models-config.json
openclaw-openai-gateway/: .env  .env.example  CURRENT_DIRECTION.md  CURRENT_TASK.md  Cargo.toml  DESIGN_FINGERPRINT_BROWSER_ADAPTER.md  DESIGN_PARENT_CHILD_SPACE_MODEL.md  DESIGN_POOL_ADMISSION_AND_EJECTION.md  DESIGN_PROXY_KEY_GATEWAY.md  DESIGN_QUOTA_OBSERVATION.md  FINAL_FEATURE_MAP.md  README.md  RUNTIME_AND_PRODUCT_SHAPE_REVIEW.md  STATUS.md  TODO.md  V1-V2-FEATURE-MODULE-MAP.md  VISION_QUOTA_PROXY.md  findings.md  progress.md  task_plan.md
openclaw-openai-gateway/migrations/: 0001_identity.sql  0002_provider_and_models.sql  0003_resource_pools.sql  0004_routing_and_execution.sql  0005_health_and_state.sql
openclaw-openai-gateway/src/: app.rs  config.rs  error.rs  lib.rs  main.rs  state.rs
openclaw-openai-gateway/src/bridge/: client.rs  mapper.rs  real.rs  types.rs
openclaw-openai-gateway/src/codex/: admission.rs  codex_app_adapter.rs  codex_app_session_source.rs  collector.rs  executor.rs  mod.rs  parser.rs  pool_repo.rs  pool_router.rs  session_bridge.rs  source_context.rs
openclaw-openai-gateway/src/domain/: account.rs  change_plan.rs  (+19 more)
openclaw-openai-gateway/tests/: http_smoke.rs
(+84 files in other folders)
