[package]
name = "openclaw-openai-gateway"
version = "0.1.0"
edition = "2021"

[lib]
name = "openclaw_openai_gateway"
path = "src/lib.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dotenvy = "0.15"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
http = "1"
async-trait = "0.1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
